# DiseaseSpreadingModels

./: .gitignore  CMakeLists.txt  ODE  README.md  SIRSolution.txt  SIRSolutionEuler.txt  SISSolution.txt
Python/: plotSEIR.py  plotSIR.py  plotSIS.py  scaniaSIR.py
inc/: euler.h  rungeKutta.h
src/: Euler.cpp  main.cpp  ode.cpp  rungeKutta.cpp
